@@ -90,6 +90,7 @@ Version CVS HEAD (?)
       backward compatibility).
     - AbstractEngine::GSChecksum(): don't allocate memory on the stack (was
       unsafe and caused compilation error with clang 2.x).
+    - Bugfix: only process the latest MIDI program change event.
 
   * Gigasampler format engine:
     - implemented the "round robin keyboard" dimension
